istio-scaling-experiment/yaml/blue-green/whoami.yaml
# kubetpl:syntax:$

# kubetpl:set:NAMESPACE=default
# kubetpl:set:GROUP=0
# kubetpl:set:REPLICAS=1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: $NAME
  namespace: $NAMESPACE
  labels:
    app: $NAME
    sidecargroup: group-$GROUP
spec:
  replicas: $REPLICAS
  strategy:
    rollingUpdate:
      maxUnavailable: 10
      maxSurge: 10
  selector:
    matchLabels:
      app: $NAME
  template:
    metadata:
      labels:
        app: $NAME
        sidecargroup: group-$GROUP
    spec:
      containers:
      - image: docker.io/containous/whoami
        imagePullPolicy: IfNotPresent
        name: $NAME
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: 32Mi
            cpu: 50m
          limits:
            memory: 32Mi
            cpu: 50m
